--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,13 @@ authors = ["Bourgond Aries <macocio@gmail.com>"]
 
 [dependencies]
 acon = "0.5.1"
+isatty = "0.1"
 rand = "0.3.14"
 sfml = "0.11.2"
+slog = { path = "../slog-rs" }
+slog-json = { path = "../slog-rs/crates/json" }
+slog-scope = { path = "../slog-rs/crates/scope" }
+slog-stream = { path = "../slog-rs/crates/stream" }
+slog-term = { path = "../slog-rs/crates/term" }
 tile_net = { path = "../TileNet" }
 time = "0.1.35"
