--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Bourgond Aries <macocio@gmail.com>"]
 [dependencies]
 acon = "0.5.1"
 isatty = "0.1"
+clippy = { version = "0.0", optional = true }
 rand = "0.3.14"
 sfml = "0.11.2"
 slog = { path = "../slog-rs" }
@@ -16,3 +17,7 @@ slog-term = { path = "../slog-rs/crates/term" }
 # tile_net = { git = "https://github.com/BourgondAries/TileNet" }
 tile_net = { path = "../TileNet" }
 time = "0.1.35"
+
+[features]
+default = []
+dev = ["clippy"]
